--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       </div>
     </section>
     <section id="transform-world">
-      <p>TRANSFORME O MUNDO COM A GENTE</p>
+        <p id="frase-01">TRANSFORME O MUNDO COM A GENTE</p>
+        <p id="frase-02">E CONSTRUA SUA CARREIRA COMO DEV</p>
     </section>
     <section id="professional-challenges">
       <h2>Evolua e encare novos desafios profissionais</h2>
